Attempt to fix social media thumbnail visibility

--- a/styles/main.css
+++ b/styles/main.css
@@ -103,8 +103,8 @@ header div{
 }
 
 .social-thumbnail{
-  height: 40px;
-  width: 40px;
+  height: 25px;
+  width: 25px;
   object-fit: contain
   }
 
